# HA-MQTT-mock

./: .env.example  Makefile  README-zhcn.md  README.md  config.py  custom_listener.py  devices.json  devices_debug.json  hello.py  main.py  pyproject.toml  requirements.txt  setup.py  utils.py
frontend/: README.md  package.json  pnpm-lock.yaml  tailwind.config.js
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/app/devices/[id]/: page.tsx
frontend/src/app/devices/new/: page.tsx
frontend/src/components/: ConfigPanel.tsx  DeviceDetail.tsx  DeviceForm.tsx  DeviceList.tsx  DeviceStateVisualizer.tsx  Header.tsx  ThemeToggle.tsx
frontend/src/components/ui/: device-state-chart.tsx  dialog.tsx  slider.tsx  use-toast.ts
frontend/src/config/: device-types.ts
frontend/src/providers/: ConfigProvider.tsx  QueryProvider.tsx
frontend/src/services/: api.ts
manifest/: api.json  dashboard.yaml
models/: __init__.py  mock.py
src/ha_mqtt_mock/: __init__.py  api.py  cli.py  config.py  device_config.py  main.py  mock.py
src/ha_mqtt_mock/engine/: __init__.py  device_config.py  mock.py  mqtt_client.py  service.py
src/ha_mqtt_mock/models/: __init__.py  alarm.py  base.py  button.py  climate.py  cover.py  fan.py  humidifier.py  lawn_mower.py  light.py  lock.py  sensor.py  switch.py  vacuum.py  valve.py  water_heater.py
src/ha_mqtt_mock/utils/: __init__.py  logging.py  mqtt_helpers.py
tests/: test_config.py  test_models.py
